--- a/pages/cv.html
+++ b/pages/cv.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../style/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV Emmy Cousin</title>
@@ -8,7 +9,9 @@
 <body>
 <h1>  CV Médias et numérique</h1>
 
-
+<div id="photo">
+    <img src="../assets/photo pr cv.jpeg" alt="ma photo" id="photo">
+</div>
 <div id = "Coordonnées">
 <h2> Emmy Cousin</h2>
 <p> Mail : <a href= "mailto:emmycousin.pro@gmail.com" target = "_blank" > emmycousin.pro@gmail.com </a></p>
@@ -19,7 +22,7 @@
     <H3> Expériences professionnelles</H3>
 <ul>
   <li> Serveuse, L'australien. Sept 2023 </li>   
-  <li> Serveuse, Près du Hem. Juillet-Aout 2023</li>   
+<li> Serveuse, Près du Hem. Juillet-Aout 2023</li>   
   <li> Service civique, Centre Social Salangro. Nov 2022-Juin - 2023</li>   
 <li> Agent de modération, </li>
 <li> Employé Polyvalente, Mezzo di pasta.</li>
